hphp/hack/test/typecheck/this_tparam_bad2.php.exp
File "this_tparam_bad2.php", line 26, characters 12-15:
Invalid argument (Typing[4110])
  File "this_tparam_bad2.php", line 20, characters 15-17:
  Expected exactly the type `Foo`
  File "this_tparam_bad2.php", line 18, characters 33-35:
  But got the nonexact type `Foo`
  File "this_tparam_bad2.php", line 18, characters 33-35:
  This type argument to `SomethingElse` must match exactly (it is invariant)
  File "this_tparam_bad2.php", line 20, characters 15-17:
  Since `Foo` is not final
  File "this_tparam_bad2.php", line 18, characters 33-35:
  this might not be a `Foo`
